# comp1100-assignment3

./: README.md  othello.cabal
src/: AI.hs  Config.hs  Game.hs  GameState.hs  Main.hs
src/Dragons/: Config.hs  GUI.hs  Timeout.hs
