name:                 othello
version:              0.1.0.0
synopsis:
description:          Othello game for COMP1100 S2 20128 Assignment 3
license:              GPL-3
license-file:         LICENSE
homepage:
author:               Robert 'Probie' Offner
maintainer:           robert.offner@anu.edu.au
category:
build-type:           Simple
cabal-version:        >=1.10

executable othello
  main-is:              Main.hs
  other-modules:        AI, Config, Dragons.GUI, Dragons.Timeout, Dragons.Config, Game, GameState
  build-depends:        base >= 4.7 && < 5, blank-canvas, text, stm, array
                      , bytestring, containers, hashable, network, unordered-containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -O2 -threaded -Wall -Werror -Widentities -Wredundant-constraints -Wno-unrecognised-warning-flags -Wno-missing-home-modules
--{-Werror-} Put it back!!!                here